--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -4,6 +4,15 @@
 layout: default
 ---
 
+<head>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script type="text/javascript"
+  src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+</head>
+
 
     <section>
       <h1>Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</h1>
