--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -17,10 +17,13 @@ layout: default
       <h1>Anonymized Synthetic Data Generation by DP-GAN</h1>
 <b> Overview: In this post, I aim to briefly review Differntial Privacy Generative Adversarial Network (DP-GAN) as a generative model to synthesize anonymous data samples.</b>
 
+<br>
+
 <figure>
 <img width="200" height="200" style="vertical-align:middle" src="/Blogs/icon_image.jpg"/>
 </figure>
 
+<br>
 
   <h2> Why to generate synthetic data?</h2>
   
@@ -33,20 +36,21 @@ Therefore, before sharing these sensitive data with the third-party research ins
 
 <p>
 
-To address both these criteria (privacy v.s. utility), one requires to devise a method to generate <b>synthetic anonymized data</b> that I) pertains the statistical properties of the original data (measured by a utility metric) while II) preserving the privacy of customers information (which can be quantified by a privacy metric) ().
+To address both these criteria (privacy v.s. utility), one requires to devise a method to generate <b>synthetic anonymized data</b> that I) pertains the statistical properties of the original data (measured by a utility metric) while II) preserving the privacy of customers information (which can be quantified by a privacy metric) ().</p>
+<br>
 <figure>
 
 <img src="/Blogs/synthetic_data.png"/>
 <figcaption>Data generative model should consider to keep the statistical properties of the original data while preserving the privacy of customers information</figcaption>
 </figure>
-
+<br>
 To create such synthetic anonymized data, one can either <b>fully or partially synthetic data</b>. In the former,
 all the features (attributes) of a given dataset are considered as sensitive data, thus analysts should generate fully
 synthetic data records to be used instead of the original data records.
 While in the latter, regarding some features as sensitive, the analysts tend to either synthesize values for these attributes
 or censor them without hurting the utility while keeping the privacy risk, e.g. identity disclosure, low.
 
-</p>
+
 
 <h2> Modified GANs to Comply with Our Needs</h2>
 
@@ -54,9 +58,11 @@ or censor them without hurting the utility while keeping the privacy risk, e.g. 
 <p>
 Generally speaking, GAN, as a generative model, learn to estimate distribution of data, then through sampling from this estimated data distribution, many data samples can be generated. GAN  is  originally  proposed  for  image  datasets,  where  the data  samples  contain  real-value  features, and is trained regardless of any privacy measurements.  In this post, we aim to generate privacy-preserved synthetic tabular data with categorical, discrete, binary or mixed features (data attributes). To adopt the original GAN to generate discrete-value anonymized features, we review <b>MedGAN</b> and DP-GAN.
 </p>
+
 <h3> MedGAN</h3>
+<br>
 <p>
-In order to generate synthetic discrete-value, they incorporate an encoder-decoder. The pre-trained encoder (\Enc(\cdot)\) maps each real record represented by $\mathbf{x}\in\mathcal{Z}_{+}^{D}$ (from a $D$-dimensional discrete-value space) into a continuous feature space, then the decoder ($Dec(\cdot)$) maps it back to the discrete-value space. The generator $G(\cdot)$ takes in random prior $\mathbf{z}$ to generate continuous-value feature ($G(\mathbd{z})$), which then maps back to the discrete-value space by $Dec (G(\mathbf{z})) $. Finally, the discriminator is trained to distinguish the generated samples from the real samples. </p>
+In order to generate synthetic discrete-value, they incorporate an encoder-decoder. The pre-trained encoder ($Enc(\cdot)$) maps each real record represented by $\mathbf{x}\in\mathcal{Z}_{+}^{D}$ (from a $D$-dimensional discrete-value space) into a continuous feature space, then the decoder ($Dec(\cdot)$) maps it back to the discrete-value space. The generator $G(\cdot)$ takes in random prior $\mathbf{z}$ to generate continuous-value feature ($G(\mathbd{z})$), which then maps back to the discrete-value space by $Dec (G(\mathbf{z})) $. Finally, the discriminator is trained to distinguish the generated samples from the real samples. </p>
 
 <p>
 The privacy of MedGAN's data generated has been empirically assessed by different privacy metrics~\cite{choi2017generating,goncalves2020generation}, but it is better if the generative model can be explicitly trained somehow for encouraging privacy.
