--- a/Blog.html
+++ b/Blog.html
@@ -8,13 +8,28 @@ layout: default
   </head>
 <section>
   <h1> Blog Posts</h1>
-<ul>
-  <li>
+
+
+<div class="parent">
+<div class="img">
+<img width="100" height="100" style="vertical-align:middle" src="/Blogs/img_object_detector/missing-rate.png" />
+</div>
+<div class="text">
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
-  
-  </li>
-    <li>
-      <a href="/Blogs/Data_anonymization_privacy.html"><b>Anonymized Synthetic Data Generation for Privacy-preserving purposes</b></a>
-  </li>
-</ul>
+</div>
+</div>
+
+
+
+<div class="parent">
+<div class="img">
+<img width="100" height="100" style="vertical-align:middle" src="/Blogs/img_data_privacy/icon_image.jpg" />
+</div>
+<div class="text">
+<a href="/Blogs/Data_anonymization_privacy.html"><b>Anonymized Synthetic Data Generation for Privacy-preserving purposes</b></a>
+</div>
+
+
+</div>
+
   </section>
