--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@ layout: default
 <img width="100" height="100" style="vertical-align:middle" src="/Blogs/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
-<a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
+<a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a partially-labelled dataset</a>
 </div>
 </div>
 
