--- a/Blog.html
+++ b/Blog.html
@@ -10,22 +10,22 @@ layout: default
   <h1> Blog Posts</h1>
 
 
-<div class="parent2">
-<div class="img2">
-<img  style="vertical-align:middle" src="/Blogs/img_object_detector/missing-rate.png" />
+<div class="parent">
+<div class="img">
+<img  width="200" heigh="200" style="vertical-align:middle" src="/Blogs/img_object_detector/missing-rate.png" />
 </div>
-<div class="text2">
+<div class="text">
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a partially-labelled dataset</a>
 </div>
 </div>
 
 
 
-<div class="parent2">
-<div class="img2">
-<img style="vertical-align:middle" src="/Blogs/img_data_privacy/icon_image.jpg" />
+<div class="parent">
+<div class="img">
+<img width="200" heigh="100", style="vertical-align:middle" src="/Blogs/img_data_privacy/icon_image.jpg" />
 </div>
-<div class="text2">
+<div class="text">
 <a href="/Blogs/Data_anonymization_privacy.html"><b>Anonymized Synthetic Data Generation for Privacy-preserving purposes</b></a>
 </div>
 
