--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@ layout: default
 
 
 <div class="parent">
-<div class="img">
+<div class="img2">
 <img  width="100" heigh="100" src="/Blogs/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
@@ -22,7 +22,7 @@ layout: default
 
 
 <div class="parent">
-<div class="img">
+<div class="img2">
 <img width="100" heigh="50" src="/Blogs/img_data_privacy/icon_image.jpg" />
 </div>
 <div class="text">
