--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@ layout: default
 <img  width="100" heigh="100" src="/Blogs/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
-<a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a partially-labelled dataset</a>
+<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> <img src="/Blogs/arrow_icon.png"/></a>
 </div>
 </div>
 
@@ -26,9 +26,8 @@ layout: default
 <img width="100" heigh="50" src="/Blogs/img_data_privacy/icon_image.jpg" />
 </div>
 <div class="text">
-<a href="/Blogs/Data_anonymization_privacy.html"><b>Anonymized Synthetic Data Generation for Privacy-preserving purposes</b></a>
+<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes <a href="/Blogs/Data_anonymization_privacy.html"> <img src="/Blogs/arrow_icon.png"/></a>
 </div>
-
 
 </div>
 
