--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@ layout: default
 <img  width="200" heigh="200" src="/Blogs/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
-<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle width="30" heigh="30"/></a>
+<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
 </div>
 </div>
 
@@ -26,7 +26,7 @@ layout: default
 <img width="100" heigh="50" src="/Blogs/img_data_privacy/icon_image.jpg" />
 </div>
 <div class="text">
-<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes <a href="/Blogs/Data_anonymization_privacy.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle width="30" heigh="30"/></a>
+<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes <a href="/Blogs/Data_anonymization_privacy.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
 </div>
 </div>
 
