--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@ layout: default
 
         <h1> News</h1>
         <ul>
-          <li> [2020/08/14] Submitted my Ph.D. thesis for jury members evaluation and defense session!
-          <li>[2020/8/28] Poster Presentation at <a href="http://montrealaisymposium.com/">Montreal AI Symposium 2020</a></li>
-          <li>[2020/9/12] Oral Presntation at <a href="http://ecai2020.eu/">ECAI 2020</a></li>
+          <li>[2020/9/12] Two Poster Presentations at <a href="http://montrealaisymposium.com/">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug">OOD set selection</a> [<a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets">long oral talk at ECAI202] </a> & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU">self-supervised framework for training a robust robust object detector with partially labelled datasets</a> </li>
+          <li> [2020/08/14] Submitted my Ph.D. thesis for evaluation and waiting for the defense session!
+          <li>[2020/8/28] Oral Presntation at <a href="http://ecai2020.eu/">ECAI 2020</a></li>
+
+
           
           
           </ul>
