--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ layout: default
 
         <h1> News</h1>
         <ul>
-          <li>[2020/9/12] Two Poster Presentations at <a href="http://montrealaisymposium.com/">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug">OOD set selection</a> [<a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets">long talk at ECAI202] </a> & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU">Robust object detector with partially labelled datasets</a> </li>
+          <li>[2020/9/12] Two Poster Presentations at <a href="http://montrealaisymposium.com/" target="_blank">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug" target="_blank">OOD set selection</a>  & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU" target="_blank">Robust object detector with partially labelled datasets</a> </li>
           <li> [2020/08/14] Submitted my Ph.D. thesis for evaluation and waiting for the defense session!
-          <li>[2020/8/28] Oral Presntation at <a href="http://ecai2020.eu/">ECAI 2020</a></li>
+          <li>[2020/8/28] <a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets" target="_blank"> Talk </a> at <a href="http://ecai2020.eu/">ECAI 2020</a> </li>
 
 
           
