--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
       <section>
 
       
-<h1 id="bio">Bio</h1>
+<h1 id="bio">Mahdieh Abbasi's Bio</h1>
 <p>I am a last-year Ph.D. student in <a href="https://www.gelgif.ulaval.ca/accueil/">Electrical and Computer Engineering Department</a> 
   at <a href="https://www.ulaval.ca/en/">Universite Laval</a> (UL) researching under supervision of 
   <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> (the director of <a href="https://iid.ulaval.ca/en/">Insitute Intelligence and Data</a>
