--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@ layout: default
 <h1 id="list-of-publications">List of Publications</h1>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/Our_proposal.jpg"/>
+<img style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
 </div>
 <div class="text">
 M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></span>.
@@ -15,7 +15,7 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/Ensemble.jpg"/>
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/Ensemble.jpg"/>
 </div>
 <div class="text">
 <p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
@@ -23,7 +23,7 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/ECAI.jpg"/>
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ECAI.jpg"/>
 </div>
 <div class="text">
 M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for differentiating Out-of-Distribution sets&quot;,
@@ -33,7 +33,7 @@ M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for di
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/MTL.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/MTL.jpg" />
 </div>
 <div class="text">
 C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Approach for Learning Task Similarity in Multitask Learning&quot;, 
@@ -42,7 +42,7 @@ C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Appr
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/DSML.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/DSML.jpg" />
 </div>
 <div class="text">
 M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning&quot;, Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
@@ -51,7 +51,7 @@ M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Conv
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/A-CNN.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/A-CNN.jpg" />
 </div>
 <div class="text">
 M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection&quot;, Arxiv Preprint, 2018.
@@ -60,7 +60,7 @@ M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Ov
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/ICLR17.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ICLR17.jpg" />
 </div>
 <div class="text">
 M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an Ensemble of Specialists.&quot; International Conference on Learning Representations (ICLR) Workshop, 2017.
@@ -69,7 +69,7 @@ M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an En
 </div>
 <div class="parent">
 <div class="img">
-<img style="vertical-align:middle" src="/images/ADMM.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ADMM.jpg" />
 </div>
 <div class="text">
 F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks.&quot;, Arxiv Preprint, 2017
@@ -78,7 +78,7 @@ F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers
 </div>
 <div class="parent">
 <div class="img">
-<img width="100" height="100" style="vertical-align:middle" src="/images/3DV15.jpg" />
+<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/3DV15.jpg" />
 </div>
 <div class="text">
 M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method.&quot;
