--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,8 @@ layout: default
 <img style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
 </div>
 <div class="text">
-M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></span>.
+<p>
+M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <bf><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></bf><\p>
 </div>
 </div>
 <div class="parent">
