--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="text">
 <p>
-M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <bf><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></bf><\p>
+M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <bf><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></bf></p>
 </div>
 </div>
 <div class="parent">
