--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="text">
 <p>
-M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <bf><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></bf></p>
+M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 </div>
 </div>
 <div class="parent">
@@ -19,7 +19,7 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/Ensemble.jpg"/>
 </div>
 <div class="text">
-<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
+<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
 </div>
 <div class="parent">
