--- a/publications.html
+++ b/publications.html
@@ -27,9 +27,10 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ECAI.jpg"/>
 </div>
 <div class="text">
+<p>
 M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for differentiating Out-of-Distribution sets&quot;,
-  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
-  <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></span>.
+  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+  <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
 </div>
 </div>
 <div class="parent">
@@ -37,17 +38,23 @@ M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for di
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/MTL.jpg" />
 </div>
 <div class="text">
+<p>
 C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Approach for Learning Task Similarity in Multitask Learning&quot;, 
-  International Joint Conference on Artificial Intelligence (IJCAI) 2019. <span style="font-weight: bold"><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></span>
+  International Joint Conference on Artificial Intelligence (IJCAI) 2019. <b"><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+
 </div>
 </div>
+
+
 <div class="parent">
 <div class="img">
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/DSML.jpg" />
 </div>
 <div class="text">
+
+<p>
 M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning&quot;, Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
-  <span style="font-weight: bold"><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></span>
+b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
 </div>
 </div>
 <div class="parent">
@@ -55,10 +62,13 @@ M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Conv
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/A-CNN.jpg" />
 </div>
 <div class="text">
+<p>
 M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection&quot;, Arxiv Preprint, 2018.
-   <span style="font-weight: bold"><a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></span>
+b><a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
 </div>
 </div>
+
+
 <div class="parent">
 <div class="img">
 <img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/ICLR17.jpg" />
