--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@ C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Appr
 
 <p>
 M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning&quot;, Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
-b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
+<b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
 </div>
 </div>
 <div class="parent">
