--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@ layout: default
 <h1 id="list-of-publications">List of Publications</h1>
 <div class="parent">
 <div class="img">
-<img style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
+<img width=100% ; style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
 </div>
 <div class="text">
 <p>
@@ -16,7 +16,7 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 </div>
 <div class="parent">
 <div class="img">
-<img style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/Ensemble.jpg"/>
+<img width=100% ;  style="vertical-align:middle; padding:9px 13.2% 0 0" src="/images/Ensemble.jpg"/>
 </div>
 <div class="text">
 <p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
