--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <section>
-<h1 id="list-of-publications">List of Publications</h1>
+<h1 >List of Publications </h1><a href=./publications_test>testi</a>
 <div class="parent">
 <div class="img">
 <img width=100% ; style="style="vertical-align:middle; padding:9px 13.2% 0 0"" src="/images/Our_proposal.jpg"/>
