--- a/publications_test.html
+++ b/publications_test.html
@@ -10,18 +10,16 @@ layout: default
 <ul class="list-group">
       <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
         <div class="media">
-          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="papers/figs/dibr.png"></div>            
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Our_proposal.jpg"></div>            
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 <p style="margin:-3px 0px 0px 0px;"></p>
-            <h4 style="font-size:15.1px; line-height:155%">Learning to Predict 3D Objects with an Interpolation-based Differentiable Renderer</h4>
+            <h4 style="font-size:15.1px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</h4>
 
 	     <p style="margin:-9.0px 0px 0px 0px;"></p>
 
-            <p style="font-size:13.4px">Wenzheng Chen, Huan Ling, Jun Gao, Edward Smith, Jaako Lehtinen, Alec Jacobson, Sanja Fidler</p>
+            <p style="font-size:13.4px">Mahdieh Abbasi, Denis Laurendeau, Christian Gagné,</p>
+            <p style="font-size:13.4px">Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 
-	     <p style="margin:-10.0px 0px 0px 0px;"></p>
-
-            <p style="font-size:13.4px">In <em>Neural Information Processing Systems</em> (<strong>NeurIPS</strong>), Vancouver, Canada, 2019</p>
             
 
       </li>
