--- a/publications_test.html
+++ b/publications_test.html
@@ -14,10 +14,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
             <h4 style="font-size:13.4px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</h4>
-            <p style="font-size:13.4px">Mahdieh Abbasi, Denis Laurendeau, Christian Gagné,</p>
-            <p style="font-size:13.4px">Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
-
-            
+            <p style="font-size:13.4px">Mahdieh Abbasi, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 
       </li>
     </ul>
