--- a/publications_test.html
+++ b/publications_test.html
@@ -13,12 +13,29 @@ layout: default
           <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Our_proposal.jpg"></div>            
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-            <h4 style="font-size:13.4px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</h4>
+            <p style="font-size:13.4px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</p>
             <p style="font-size:13.4px">Mahdieh Abbasi, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
-
+</div>
+</div>
       </li>
     </ul>
+
 <p style="margin:-8.5px 0px 0px 0px;"></p>
+
+
+
+
+<ul class="list-group">
+      <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+        <div class="media">
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>            
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+            Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
+</div>
+</div>
+      </li>
+    </ul>
 
 </div>
 
