--- a/publications_test.html
+++ b/publications_test.html
@@ -10,12 +10,12 @@ layout: default
 <ul class="list-group">
       <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
         <div class="media">
-          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Our_proposal.jpg"></div>            
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:30%;" href=""><img width="100%" src="/images/Our_proposal.jpg"></div>            
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
             <p style="font-size:13.4px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</p>
  <p style="margin:-9.0px 0px 0px 0px;"></p>
-            <p style="font-size:13.4px">Mahdieh Abbasi, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
+            <p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 </div>
 </div>
       </li>
