--- a/publications_test.html
+++ b/publications_test.html
@@ -14,7 +14,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
             <p style="font-size:13.4px; line-height:155%">Self-supervised Robust Object Detectors from Partially Labelled Datasets</p>
- <p style="margin:-9.0px 0px 0px 0px;"></p>
+ <p style="margin:-10px 0px 0px 0px;"></p>
             <p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 </div>
 </div>
@@ -22,8 +22,6 @@ layout: default
     </ul>
 
 <p style="margin:-8.5px 0px 0px 0px;"></p>
-
-
 
 
 <ul class="list-group">
@@ -39,6 +37,52 @@ layout: default
 </div>
       </li>
     </ul>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/ECAI.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">Towards metrics for differentiating Out-of-Distribution sets</p>
+
+<p style="font-size:13.4px; line-height:155%">in ECAI, 2020 (Oral). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+  <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
+
+</div>
+</div>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%"></p>
+
+<p style="font-size:13.4px; line-height:155%"></p>
+
+</div>
+</div>
+
+</div>
+</ul>
+</li>
+
 
 </div>
 
