--- a/publications_test.html
+++ b/publications_test.html
@@ -27,12 +27,12 @@ layout: default
 <ul class="list-group">
       <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
         <div class="media">
-          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>  
+          <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>  
           
-	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 <p style="font-size:13.4px; line-height:155%">Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</p>
-<p style="font-size:13.4px">Mahdieh Abbasi, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba,
-            <strong>Long paper in Canadian Conference on AI</strong>, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
+<p style="font-size:13.4px">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba,
+            <strong>Long paper in Canadian Conference on AI</strong>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
 </div>
       </li>
@@ -47,18 +47,41 @@ layout: default
 <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
 <div class="media">
 
-<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/ECAI.jpg"></div>
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/ECAI.jpg"></div>
 
-<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
 <p style="font-size:13.4px; line-height:155%">Towards metrics for differentiating Out-of-Distribution sets</p>
 
-<p style="font-size:13.4px; line-height:155%">in ECAI, 2020 (Oral). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
   <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
+</div>
+</div>
+</li>
+</ul>
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">A Principled Approach for Learning Task Similarity in Multitask Learning</p>
+
+<p style="font-size:13.4px; line-height:155%"> In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%) <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
 
 </div>
 </div>
 
+</div>
+</ul>
+</li>
 
 
 
