--- a/publications_test.html
+++ b/publications_test.html
@@ -32,7 +32,7 @@ layout: default
 	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 <p style="font-size:13.4px; line-height:155%">Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</p>
 <p style="font-size:13.4px">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba,
-            <strong>Long paper in Canadian Conference on AI</strong>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
+            <b>Long paper in Canadian Conference on AI</b>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
 </div>
       </li>
@@ -74,7 +74,35 @@ layout: default
 
 <p style="font-size:13.4px; line-height:155%">A Principled Approach for Learning Task Similarity in Multitask Learning</p>
 
-<p style="font-size:13.4px; line-height:155%"> In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%) <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+
+</div>
+</div>
+
+</div>
+</ul>
+</li>
+
+
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning</p>
+
+<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagné, Rakesh B. Bobba; Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
+<b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
+</p>
 
 </div>
 </div>
