--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@ M. Abbasi, A. Rajabi, C. Gagné, R. B. Bobba, &quot;Towards Dependable Deep Conv
 <div class="text">
 <p>
 M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection&quot;, Arxiv Preprint, 2018.
-b><a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
+<b><a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
 </div>
 </div>
 
