--- a/publications_test.html
+++ b/publications_test.html
@@ -79,7 +79,6 @@ layout: default
 </div>
 </div>
 
-</div>
 </ul>
 </li>
 
@@ -94,7 +93,7 @@ layout: default
 <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
 <div class="media">
 
-<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/DSML.jpg"></div>
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
@@ -107,9 +106,14 @@ layout: default
 </div>
 </div>
 
-</div>
 </ul>
 </li>
+
+
+
+
+
+
 
 
 
@@ -119,18 +123,94 @@ layout: default
 <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
 <div class="media">
 
-<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/A-CNN.jpg"></div>
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%"></p>
+<p style="font-size:13.4px; line-height:155%">Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection</p>
 
-<p style="font-size:13.4px; line-height:155%"></p>
+<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Arezoo Rajabi, Azadeh S. Mozafari, Rakesh  Bobba, Christian Gagné; In Arxiv; 2018. <a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
+
+</div>
+</div>
+
+
+</ul>
+</li>
+
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/ICLR17.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">Robustness to Adversarial Examples through an Ensemble of Specialists</p>
+
+<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi and Christian Gagné; In International Conference on Learning Representations (ICLR) Workshop, 2017.<b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b></p>
 
 </div>
 </div>
 
+
+</ul>
+</li>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/ADMM.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks</p>
+
+<p style="font-size:13.4px; line-height:155%">Farkhondeh Kiaee, Christian Gagné, Mahdieh Abbasi; In Arxiv, 2017</p>
+
 </div>
+</div>
+
+
+</ul>
+</li>
+
+
+
+
+<p style="margin:-9px 0px 0px 0px;"></p>
+
+<ul class="list-group">
+<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
+
+<div class="media">
+
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/3DV15.jpg"></div>
+
+<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
+
+<p style="font-size:13.4px; line-height:155%">Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method</p>
+
+<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Hamid Reza Rabiee, Christian Gagné; In 3D Computer Vision IEEE Conference, 2015 (acceptance rate for <b>oral</b> 15%)  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
+
+</div>
+</div>
+
+
 </ul>
 </li>
 
