--- a/publications_test.html
+++ b/publications_test.html
@@ -68,13 +68,11 @@ layout: default
 <li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
 <div class="media">
 
-<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>
+<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:15.2%;" href=""><img width="100%" src="/images/MTL.jpg"></div>
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">A Principled Approach for Learning Task Similarity in Multitask Learning</p>
-
-<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+<p style="font-size:13.4px; line-height:155%">A Principled Approach for Learning Task Similarity in Multitask Learning Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
 
 </div>
 </div>
