--- a/publications_test.html
+++ b/publications_test.html
@@ -29,7 +29,7 @@ layout: default
           <div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/Ensemble.jpg"></div>  
           
 	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
-<p style="font-size:13.4px; line-height:155%">Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</strong></p>
 <p style="font-size:13.4px">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba,
             <b>Long paper in Canadian Conference on AI</b>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
