--- a/publications_test.html
+++ b/publications_test.html
@@ -14,7 +14,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
             <p style="font-size:13.4px; line-height:155%"><strong>Self-supervised Robust Object Detectors from Partially Labelled Datasets</strong></p>
-<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné, Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
+<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
 </div>
 </div>
       </li>
@@ -30,7 +30,7 @@ layout: default
           
 	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 <p style="font-size:13.4px; line-height:155%"><strong>Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</strong></p>
-<p style="font-size:13.4px">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba,
+<p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba;
             <b>Long paper in Canadian Conference on AI</b>, 2020(<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
 </div>
 </div>
@@ -50,9 +50,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
-<p style="font-size:13.4px; line-height:155%">Towards metrics for differentiating Out-of-Distribution sets</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Towards metrics for differentiating Out-of-Distribution sets</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
   <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
 </div>
 </div>
@@ -71,7 +71,8 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">A Principled Approach for Learning Task Similarity in Multitask Learning Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In International Joint Conference on Artificial Intelligence (IJCAI), 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"><strong>A Principled Approach for Learning Task Similarity in Multitask Learning</strong></p>
+<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In <b>International Joint Conference on Artificial Intelligence </b>, 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
 
 </div>
 </div>
@@ -94,9 +95,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Arezoo Rajabi, Christian Gagné, Rakesh B. Bobba; Dependable and Secure Machine Learning (DSML), co-located with Dependable System Networks (DSN), 2018. 
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagné, Rakesh B. Bobba; In <b>Dependable and Secure Machine Learning (DSML)</b>, co-located with Dependable System Networks (DSN), 2018. 
 <b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
 </p>
 
@@ -124,9 +125,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Arezoo Rajabi, Azadeh S. Mozafari, Rakesh  Bobba, Christian Gagné; In Arxiv; 2018. <a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Azadeh S. Mozafari, Rakesh B.  Bobba, Christian Gagné; In Arxiv, 2018. <a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
 
 </div>
 </div>
@@ -150,9 +151,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">Robustness to Adversarial Examples through an Ensemble of Specialists</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Robustness to Adversarial Examples through an Ensemble of Specialists</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi and Christian Gagné; In International Conference on Learning Representations (ICLR) Workshop, 2017.<b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b> and Christian Gagné; In <b>International Conference on Learning Representations (ICLR) </b> Workshop, 2017.<b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b></p>
 
 </div>
 </div>
@@ -175,9 +176,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Farkhondeh Kiaee, Christian Gagné, Mahdieh Abbasi; In Arxiv, 2017</p>
+<p style="font-size:13.4px; line-height:155%">Farkhondeh Kiaee, Christian Gagné, <b>Mahdieh Abbasi</b>; In Arxiv, 2017</p>
 
 </div>
 </div>
@@ -200,9 +201,9 @@ layout: default
 
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:75%;">
 
-<p style="font-size:13.4px; line-height:155%">Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method</p>
+<p style="font-size:13.4px; line-height:155%"><strong>Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method</strong></p>
 
-<p style="font-size:13.4px; line-height:155%">Mahdieh Abbasi, Hamid Reza Rabiee, Christian Gagné; In 3D Computer Vision IEEE Conference, 2015 (acceptance rate for <b>oral</b> 15%)  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Hamid Reza Rabiee, Christian Gagné; In <b>3D Computer Vision IEEE Conference</b>, 2015 (acceptance rate for <b>oral</b> 15%)  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
 
 </div>
 </div>
