--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ layout: default
           <li> [2020/08/14] Submitted my Ph.D. thesis for evaluation and waiting for the defense session!
           <li>[2020/8/28] <a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets" target="_blank"> Talk </a> at <a href="http://ecai2020.eu/">ECAI 2020</a> </li>
 
+<li>[2020/05/08]<strong>Best Paper Award</strong> from Canadian AI 2020</li>
+
 
           
           
